2011-03-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c: Auto-placement of the left margin of the plot
	was failing to allow room for "set key outside left".

	* term/post.trm: Add a %%Page statement in *.eps files, as current
	versions of standard tools seem to expect it.
	Bug #3046700

2011-03-13  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgnuplot.rc, src/win/wgnuplot.exe.manifest: add new
	manifest for wgnuplot to enable visual styles
	
	* src/win/wmenu.c, src/win/wtext.c: remove unused variables to
	make compiler happy, avoid C++ style comments
	
	* src/win/wtext.c (TextInit), src/win/wmenu.c, src/win/wgnuplib.h,
	src/win/wresourc.h: add a statusbar to the text window,
	reduce size of text area accordingly
	
	* src/win/wtext.c (WndParentProc): [WM_GETMINMAXINFO] use active
	font to calculate minimum window size; take menu, toolbar and
	statusbar into account

2011-03-13  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/cygwin/Makefile (LDLIBS): Add newly needed library.

2011-03-13  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/config.nt, src/alloc.c, src/alloc.h, src/command.c,
	src/eval.c, src/fit.c, src/gpexecute.c, src/plot.c, src/syscfg.h,
	src/win/wcommon.h, src/win/wgnuplib.c, src/win/wgnuplib.h,
	src/win/wgnuplot.mnu, src/win/wgnuplot.rc, src/win/wgraph.c,
	src/win/winmain.c, src/win/wmenu.c, src/win/wpause.c,
	src/win/wprinter.c, src/win/wtext.c, term/win.trm:
	Remove Win16 support.

	* src/win/winmain.c (WinMain): init common controls
	* config/mingw/Makefile, config/magefile.mgw, config/makefile.nt,
	conig/watcom/Makefile: add library comctl32

	* src/win/wmwenu.c (LoadMacros, CloseMacros, MenuBottonProc): use
	common controls toolbar, remove MenuBottonProc
	* src/win/wgnuplib.h (MW): add handle for toolbar, remove pointer
	to MenuBottonProc
	* src/win/wresourc.h: add ID for toolbar
	* src/win/wtext.c (WndParentProc): [WM_SIZE] forward msg to toolbar,
	[WM_PAINT] remove completely
